Fixed a colour contrast issue with table heading

--- a/src/campaign/sass/components/_table.scss
+++ b/src/campaign/sass/components/_table.scss
@@ -12,6 +12,7 @@
 
 .table__thead .table__header {
   background: $grey-4;
+  color: #000;
 }
 
 .table__header {
